--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     :root {
       --bg: #f5f3ec;          /* milk-like background */
       --text: #2b2b2b;
-      --shadow: rgba(0,0,0,0.18);
+      --shadow: rgba(0,0,0,0.18);.
       --emoji-size: 54px;
       --top-safe: 110px;      /* keep emojis from hiding behind header */
     }
